--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,24 @@
 name: Release
 
 on:
-  workflow_dispatch:    # 手動実行を可能にする
   push:
     tags:
-      - 'v*' 
+      - 'v*'
+  workflow_dispatch:
 
+permissions:
+  contents: write
+  packages: write
+  
 jobs:
   release:
     runs-on: windows-latest
-    permissions: write-all    # 権限を追加
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
     
@@ -29,23 +32,13 @@ jobs:
       run: |
         pyinstaller --name Oni-ChanMV --onefile --noconsole main.py
     
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAT }}    # PATを使用
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        tag_name: ${{ github.ref_name }}    # タグ名の参照方法を修正
-        release_name: Release ${{ github.ref_name }}
+        files: |
+          ./dist/Oni-ChanMV.exe
         draft: false
         prerelease: false
-    
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
       env:
-        GITHUB_TOKEN: ${{ secrets.PAT }}    # PATを使用
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./dist/Oni-ChanMV.exe
-        asset_name: Oni-ChanMV.exe
-        asset_content_type: application/octet-stream
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
